@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-01T02:02:45Z",
+  "timestamp" : "2022-10-01T08:23:51Z",
   "count_outdated" : 360,
   "uniques_outdated" : 192,
   "count" : 395,
-  "uniques" : 213,
+  "uniques" : 214,
   "clones" : [
     {
       "timestamp": "2022-09-17T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -102,6 +102,13 @@
       "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-10-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
