@@ -1,3 +1,11 @@
+2022-10-01T08:23:51Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3163816266
+* notice: last 14d: unq all: 2 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 192 360 / 213 395
+* notice: next accum: outdated-unq outdated-all / unq all: 192 360 / 214 395
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-17 2022-10-01]
+
 2022-10-01T02:02:45Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3162773263
 * notice: last 14d: unq all: 2 35
